kubernetes/main/apps/database/dragonfly/cluster/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: dragonfly-operator
